<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Reclamation"
    android:background="@drawable/form"
    android:padding="20dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Code"
        android:textStyle="bold"
        android:textColor="@color/white"


        />
    <EditText
        android:id="@+id/Code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SaisirCode"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textStyle="bold"
        android:textColor="@color/white"

        />
    <EditText
        android:id="@+id/nom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom2"
        android:inputType="text"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:textStyle="bold"
        android:textColor="@color/white"

        />
    <EditText
        android:id="@+id/prenom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prenom2"
        android:inputType="text"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel"
        android:textStyle="bold"
        android:textColor="@color/white"

        />
    <EditText
        android:id="@+id/tel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tel2"
        android:inputType="numberSigned"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Destinataire2"
        android:textStyle="bold"
        android:textColor="@color/white"

        />
    <EditText
        android:id="@+id/à"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Destinataire"
        android:inputType="text"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Objet"
        android:textStyle="bold"
        android:textColor="@color/white"

        />
    <EditText
        android:id="@+id/objet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/objet2"
        android:inputType="text"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reclamation"
        android:textStyle="bold"
        android:textColor="@color/white"

        />
    <EditText
        android:id="@+id/rec"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:hint="@string/Reclamation2"

        />
    <Button
        android:id="@+id/Envoyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Envoyer"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        />

</LinearLayout>